# innisfree

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.fast  LICENSE  Makefile  README.md  TODO.md  buster-backports.list  i  innisfree@.service  justfile  pyproject.toml  release  requirements.txt
containers/: Containerfile-alpine  Containerfile-debian  Containerfile-fedora
debian/: changelog  control  postinst  rules
files/: cloudinit.cfg  nginx.conf  stream.conf  stream.conf.j2  wg0.conf.j2
files/k8s/: crd.yml  deployment.yml  rbac.yml  service.yml
fixtures/: innisfree-wg-local.conf  innisfree-wg-remote.conf
innisfree/: __init__.py  cli.py  innisfree.py  operator.py  proxy.py  server.py  ssh.py  utils.py  wg.py
src/: cloudinit.rs  config.rs  doctor.rs  error.rs  floating_ip.rs  lib.rs  main.rs  manager.rs  net.rs  proxy.rs  server.rs  ssh.rs  wg.rs
src/server/: cloudinit.rs  floating_ip.rs  mod.rs  ssh_key.rs
src/server/digitalocean/: floating_ip.rs  mod.rs  server.rs  ssh_key.rs
tests/: go.sh  integration_test.rs  test_innisfree.py  test_ports.py
tools/: create  destroy  test-runner  test-ssh
