[package]
name = "innisfree"
version = "0.1.1"
authors = ["Conor Schaefer <conor.schaefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.0"
env_logger = "0.8.3"
# digitalocean = "0.1.1"
# digitalocean = { git = "https://github.com/phaynes/digitalocean", branch = "hotfix_branch" }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_derive = "1.0.89"
serde_json = "1.0.39"
