[package]
name = "innisfree"
version = "0.3.0-alpha.0"
authors = ["Conor Schaefer <conor@ruin.dev>"]
edition = "2021"
description = "Exposes local services on public IPv4 address, via cloud server."
license = "AGPL-3.0-only"
readme = "README.md"
publish = true
repository = "https://github.com/conorsch/innisfree"
categories = ["command-line-utilities", "network-programming"]
keywords = ["self-hosting", "wireguard"]

[dependencies]
anyhow = "*"
async-trait = "0.1"
clap = { version = "4", features = ["env", "derive", "cargo"] }
custom_error = "~1.9"
env_logger = "~0.9"
futures = "0.3"
home = "~0.5"
ipnet = "~2"
log = "~0.4"
openssl = { version = "0.10", features = ["vendored"] }
osshkeys = { version = "*" }
pnet = "~0.28"
rand = "~0.8"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tempfile = "3"
tera = "1"
tokio = { version = "1.27", features = [ "io-util", "macros", "net", "rt-multi-thread", "signal"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
depends = "$auto"
extended-description = "Creates a remote host in the cloud, then establishes a Wireguard tunnel to it. Only supports proxying TCP traffic, for now."
assets = [
  ["target/x86_64-unknown-linux-musl/release/innisfree", "usr/bin/", "755"],
  ["innisfree@.service", "usr/lib/systemd/system/", "644"],
]
name = "innisfree"
priority = "optional"
section = "net"
